Shapekeys with driver not working with new depsgraph in 2.75 test build #44980

Closed
opened 2015-06-06 17:29:20 +02:00 by David Krupicz · 10 comments

windows xp / 32 bit / 2.75 test build with new depsgraph enabled.

see blend file:
https://drive.google.com/file/d/0B2uvwo42PkSmb0dEQXF5REsyYm8/view?usp=sharing

The 'cat claws' on the hand should retract or extend based on the "CLAWS" slider I have linked using a driver.
(all the way left is fully extended, all the way right is fully retracted)

The driver sets the shape key from four shape keys assigned to the claw mesh.
This works properly if you load Blender with the old depsgraph. In the new depsgraph, the shape keys do not respond to the control.

I have found that you can move the claws slider, select, Grab, and move the claw mesh, and it will then update the shape to the correct shape key.

windows xp / 32 bit / 2.75 test build with new depsgraph enabled. see blend file: https://drive.google.com/file/d/0B2uvwo42PkSmb0dEQXF5REsyYm8/view?usp=sharing The 'cat claws' on the hand should retract or extend based on the "CLAWS" slider I have linked using a driver. (all the way left is fully extended, all the way right is fully retracted) The driver sets the shape key from four shape keys assigned to the claw mesh. This works properly if you load Blender with the old depsgraph. In the new depsgraph, the shape keys do not respond to the control. I have found that you can move the claws slider, select, Grab, and move the claw mesh, and it will then update the shape to the correct shape key.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dkrupicz

Added subscriber: @dkrupicz

Added subscriber: @mont29

Added subscriber: @mont29
Sergey Sharybin was assigned by Bastien Montagne 2015-06-06 21:47:55 +02:00
file: [klf405 RWK frames R - depsgraph test - dev ver.blend](https://archive.blender.org/developer/F186340/klf405_RWK_frames_R_-_depsgraph_test_-_dev_ver.blend)

It's quite crucial to give exact steps of reproducing the issue, especially when your're sharing such a comprehensive file.

What is the "CLAWS" slider and where is it?

P.S. Speaking of comprehensivness of the files -- it also usually helps sharing minimal files which demonstrates the issue ;)

It's quite crucial to give exact steps of reproducing the issue, especially when your're sharing such a comprehensive file. What is the "CLAWS" slider and where is it? P.S. Speaking of comprehensivness of the files -- it also usually helps sharing minimal files which demonstrates the issue ;)

@Sergey enable the fith 3DView layer, you have a big 'Claws' rig-slider, which is working with old depsgraph but not when enabling new one.

@Sergey enable the fith 3DView layer, you have a big 'Claws' rig-slider, which is working with old depsgraph but not when enabling new one.

This issue was referenced by 473d46263b

This issue was referenced by 473d46263bf62810e1a3fd17acfb80e66ebaec5e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 1cf60f1a9c

This issue was referenced by 1cf60f1a9c6d79829143446253a2aa4fd1bcd96c

Uploading file here so it's never lost: shape keys not working in new depsgraph.zip

Uploading file here so it's never lost: [shape keys not working in new depsgraph.zip](https://archive.blender.org/developer/F1296901/shape_keys_not_working_in_new_depsgraph.zip)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44980
No description provided.