Fix T44980: Shapekeys with driver not working with new depsgraph in 2.75 test build

Was just a few missing dependencies.